Update Google Apps Script URL in landing page

--- a/slay-your-shift-landing-page.html
+++ b/slay-your-shift-landing-page.html
@@ -355,7 +355,7 @@
 
     <script>
         // Replace with your actual Google Apps Script Web App URL
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyQXLWG-kzKBLa7KLg7_L5k14XfGM497n415ONuS3u8txmdLs88eyL6s9cD2AC156CyCg/exec';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx1tFa60JphZwYWwhICT3qNxrA8RVMJSzPAgUqEEpl_1dpV70uNqX1wsJ5Web8fLavV/exec;
 
         const form = document.getElementById('optinForm');
         const messageDiv = document.getElementById('message');
