Remove confidence meter and challenge mode banner
Removed confidence meter and challenge mode banner from HTML.

--- a/pilot/index.html
+++ b/pilot/index.html
@@ -57,19 +57,18 @@
       flex-wrap:wrap;
       margin-bottom:16px;
     }
-   <!-- NEW: Confidence Meter -->
-<div class="confidence-container">
-  <div class="confidence-label">Confidence Level</div>
-  <div class="confidence-bar-bg">
-    <div class="confidence-bar-fill" id="confidenceBar"></div>
-  </div>
-  <div class="confidence-text" id="confidenceText">Build confidence by answering correctly!</div>
-</div>
-    <!-- NEW: Challenge Mode Banner -->
-<div class="challenge-banner" id="challengeBanner">
-  <div class="challenge-info">🎯 5-Card Challenge Active</div>
-  <div class="challenge-progress" id="challengeProgress">0/5</div>
-</div>
+
+    select{
+      padding:10px 12px;
+      border-radius:10px;
+      border:2px solid var(--primary);
+      background:#fff;
+      font-size:1rem;
+      font-weight:750;
+      color: var(--ink);
+      min-width: 260px;
+    }
+
     select{
       padding:10px 12px;
       border-radius:10px;
@@ -88,7 +87,6 @@
       align-items:center;
       justify-content:flex-end;
       flex:1;
-      <button class="btn-sound-toggle" id="soundToggle" title="Toggle sound">🔊</button>
     }
 
     .pill{
@@ -463,6 +461,7 @@
     <select id="category"></select>
 
     <div class="pillStats">
+      <button class="btn-sound-toggle" id="soundToggle" title="Toggle sound">🔊</button>
       <div class="pill" id="scorePill">Correct 0 • Incorrect 0 • 0%</div>
       <div class="pill" id="progressPill">0 / 0 available</div>
     </div>
